Update API and Gradle